# esovalue-app

./: .gitignore  Dockerfile  cloudbuild.yaml  main.py  os.py  pyproject.toml  requirements.txt  run.sh
