[tool.poetry]
name = "eso-website"
version = "0.1.0"
description = ""
authors = ["Stéphane Thibaud <snthibaud@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
streamlit = "*"
esovalue = ">=0.1.9"
hvplot = "*"
bokeh = "2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
