[tool.poetry]
name = "eso-website"
version = "0.1.2"
description = ""
authors = ["Stéphane Thibaud <snthibaud@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
streamlit = ">=1.18"
esovalue = ">=0.1.12"
hvplot = "*"
bokeh = "<3"  # Cannot use 3 due to hvplot incompatibility thus far (from bokeh.models import Box in panel.io.model)
beautifulsoup4 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
